# ReconX-Jai

./: .dockerignore  .gitignore  ARCHIVE_MANIFEST.md  CHANGELOG.md  CONTRIBUTING.md  Dockerfile  Makefile  README.md  VERSION.txt  dashboard_state.json  docker-compose.x.yml  docker-compose.yml  fix_dupes.py  fix_imports.py  fix_other_dbs.py  gen_registry.py  migrate.py  mypy.ini  package-lock.json  package.json  pyproject.toml  pytest.ini  reconx-env.sh  requirements.txt  ruff.toml  setup_v1_routes.py  test_reconx.py
.github/workflows/: ci.yml  (+1 more)
adapters/: shell_adapter.py
api/: dashboard_api.py  execution_api.py  metrics_api.py  project_api.py  results_api.py  schema_api.py
archieve/: .coverage  baseline-tests.txt  dashboard_events.json  dashboard_gaps.json  dashboard_map.json  dashboard_registry.json  dashboard_state.json  dns_tools_setup.py  empty_dirs_moved_utf8.txt  empty_files_moved_utf8.txt  fix.py  fix_adapters.py  fix_adapters2.py  fix_db_paths.py  gen_arguments.py  generate_stage10.py  generate_stage11.py  generate_stage12.py  generate_stage13.py  generate_stage14.py  generate_stage16.py  generate_stage19.py  generate_stage20.py  generate_stage7.py  generate_stage9.py  migrate.py  move_to_archieve.py  patch_db.py  reconx.db  ruff_post_migration.txt  setup_assessment_tools.py  setup_osint_tools.py  setup_packet_tools.py  setup_smb_tools.py  setup_subdomain_tools.py  setup_vuln_tools.py  setup_web_tools.py  structure_after_utf8.txt  structure_before_utf8.txt  targets.txt
archive/: dashboard_state.json
argument_engine/: argument_loader.py  profile_manager.py
cli/: cloud_menu.py  menu.py  ui.py  web_menu.py
config/: config.yaml  production.yaml
core/: analytics_db.py  argument_engine.py  asset_db.py  auth_db.py  automation_db.py  base_adapter.py  campaign_db.py  case_db.py  cloud_db.py  cloud_engines.py  correlation_engine.py  db.py  distributed_db.py  execution_engine.py  exposure_db.py  finding_db.py  graph_db.py  intelligence_db.py  inventory_manager.py  job_db.py  job_manager.py  parser_engine.py  plugin_db.py  process_manager.py  profile_manager.py  project_db.py  registry_db.py  registry_seeder.py  report_db.py  scheduler.py  screenshot_db.py  threat_db.py  tool_registry.py  validator.py  web_db.py  web_engines.py
docs/: OPERATIONS_GUIDE.md  dependencies.md  development.md  duplicate_matrix.md  events.md  health_monitoring.md  observability.md  workflow-engine.md  workflows.md
doctor/: binary_checker.py
execution/: adapter_manager.py  executor.py  job_tracker.py  queue_manager.py
migrations/: env.py
parsers/: httpx_parser.py
pipeline_engine/: dependency_resolver.py  execution_graph.py  orchestrator.py  pipeline_manager.py
pipelines/: cloud_pipeline.py  osint_pipeline.py  recon_pipeline.py
plugins/: plugin_manager.py  sdk.py
processing/: asset_manager.py  correlation_engine.py  deduplicator.py  enrichment_engine.py  parser_engine.py  relationship_engine.py
product/: .env  .env.example  USAGE.md  audit.py  baseline-ruff.txt  build.py  config.yaml  coverage_output.txt  coverage_output_2.txt  generate_docs.py  generate_examples.py  generate_routes.py  generate_stage15.py  generate_stage17.py  generate_stage18.py  generate_stage8.py  pyproject.toml  pytest.ini  reconx.spec  refactor_db.py  ruff_report.txt  setup_ad_tools.py  setup_cloud_tools.py  setup_content_tools.py  structure_after.txt  structure_before.txt  test_post_migration.txt  test_results.txt  test_structure.txt
project_manager/: import_export.py  project_index.py  project_validator.py  state_manager.py
registry/: categories.json  outputs.json  tool_metadata.json  tools.json
screenshots/: capture_engine.py  change_detector.py
scripts/: backup.sh  db_benchmark.py  event_benchmark.py  release.py  restore.sh  workflow_benchmark.py
streaming/: event_dispatcher.py  job_broadcaster.py  progress_tracker.py
tests/: test_ai_swarm.py  test_asset_scorer.py  test_reconx.py
tool_manager/: __init__.py
workspace/: .gitkeep  analytics.db  auth.db  exposure.db  jobs.db  reports.db  web_assets.db
(+4196 files in other folders)
