[build-system]
requires = ["setuptools>=69", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "reconx"
version = "4.0.0"
description = "Asynchronous reconnaissance framework"
readme = "README.md"
requires-python = ">=3.11"
authors = [{name = "ReconX Team"}]
license = {text = "MIT"}
keywords = [
    "automation",
    "reconnaissance",
    "workflow",
    "plugin"
]
dependencies = [
    "fastapi>=0.100.0",
    "uvicorn>=0.23.0",
    "sqlalchemy>=2.0.0",
    "aiosqlite",
    "pydantic>=2.0",
    "pydantic-settings",
    "alembic>=1.11.0",
    "typer",
    "rich>=13.0.0",
    "structlog",
    "aiohttp>=3.8.0",
    "requests>=2.31.0",
    "jinja2>=3.1.2",
    "pyyaml>=6.0",
    "python-dotenv",
    "passlib[bcrypt]",
    "PyJWT",
    "reportlab",
    "opentelemetry-api",
    "opentelemetry-sdk",
    "opentelemetry-instrumentation-fastapi",
    "opentelemetry-exporter-otlp",
    "prometheus-client",
    "cryptography",
    "hvac",
    "langchain-core",
    "langchain-openai",
    "openai",
    "neo4j",
    "weasyprint",
    "croniter",
    "celery",
    "dnspython",
    "email-validator",
    "websockets",
    "questionary",
    "psutil",
    "flask",
    "flask-sock",
    "python-multipart"
]

[project.optional-dependencies]
dev = [
  "pytest",
  "pytest-asyncio",
  "pytest-cov",
  "ruff",
  "mypy",
  "bandit",
  "mkdocs",
  "mkdocs-material"
]

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]
exclude = ["archive*", "workspace*"]

[tool.setuptools.package-data]
reconx = ["config/*.yaml"]
"*" = ["*.html", "*.css", "*.js", "*.png", "*.jpg", "*.svg", "*.ico", "*.json", "*.yaml"]

[project.scripts]
reconx = "apps.cli.__main__:main"
[tool.ruff]
line-length = 250

[tool.ruff.lint]
ignore = ["E402", "E501", "E741", "F401", "F811", "F841", "B007", "B008", "B904", "UP035"]

[tool.mypy]
ignore_missing_imports = true
warn_return_any = false
strict_optional = false
check_untyped_defs = false
disallow_untyped_defs = false
disable_error_code = ["assignment", "union-attr", "return-value", "arg-type", "attr-defined", "var-annotated", "valid-type", "misc", "operator", "call-overload", "name-defined", "index"]
